# jerasure-gf

./: .gitignore  CMakeLists.txt  README.txt  makefile
Examples/: CMakeLists.txt  cauchy_01.c  cauchy_02.c  cauchy_03.c  cauchy_04.c  decoder.c  encoder.c  examples.h  fillrand.c  galois.c  galois.h  jerasure_01.c  jerasure_02.c  jerasure_03.c  jerasure_04.c  jerasure_05.c  jerasure_06.c  jerasure_07.c  jerasure_08.c  liberation_01.c  makefile  pdc1.c  pdc2.c  rc4.c  rc4.h  reed_sol_01.c  reed_sol_02.c  reed_sol_03.c  reed_sol_04.c  shs.h  shs_n.c  test1.c
lib/: CMakeLists.txt  cauchy.c  cauchy.h  gal_stub.c  gal_stub.h  galois.c  galois.h  jerasure.c  jerasure.h  jerasure_int.h  liberation.c  makefile  reed_sol.c  reed_sol.h
