include_directories (${JERASURE_SOURCE_DIR}/lib) 
link_directories (${JERASURE_BINARY_DIR}/lib) 

add_library(fp1 OBJECT fillrand.c pdc1.c)
add_library(fp2 OBJECT fillrand.c pdc2.c)
add_library(fr OBJECT fillrand.c)
add_library(fall OBJECT pdc1.c pdc2.c shs_n.c rc4.c)

add_executable (jerasure_01 jerasure_01.c)
add_executable (jerasure_02 jerasure_02.c)
add_executable (jerasure_03 jerasure_03.c)
add_executable (jerasure_04 jerasure_04.c)
add_executable (jerasure_05 jerasure_05.c $<TARGET_OBJECTS:fp1> )
add_executable (jerasure_06 jerasure_06.c $<TARGET_OBJECTS:fp2> )
add_executable (jerasure_07 jerasure_07.c $<TARGET_OBJECTS:fp2> )
add_executable (jerasure_08 jerasure_08.c $<TARGET_OBJECTS:fp2> )
add_executable (reed_sol_01 reed_sol_01.c $<TARGET_OBJECTS:fp1> )
add_executable (reed_sol_02 reed_sol_02.c)
add_executable (reed_sol_03 reed_sol_03.c $<TARGET_OBJECTS:fp1> )
add_executable (reed_sol_04 reed_sol_04.c $<TARGET_OBJECTS:fr> )
add_executable (cauchy_01 cauchy_01.c)
add_executable (cauchy_02 cauchy_02.c $<TARGET_OBJECTS:fp2> )
add_executable (cauchy_03 cauchy_03.c $<TARGET_OBJECTS:fp2>)
add_executable (cauchy_04 cauchy_04.c $<TARGET_OBJECTS:fp2> )
add_executable (liberation_01 liberation_01.c $<TARGET_OBJECTS:fp2> )
add_executable (test1 test1.c $<TARGET_OBJECTS:fall> )
add_executable (decoder decoder.c)
add_executable (encoder encoder.c)

target_link_libraries (jerasure_01 jerasure)
target_link_libraries (jerasure_02 jerasure)
target_link_libraries (jerasure_03 jerasure)
target_link_libraries (jerasure_04 jerasure)
target_link_libraries (jerasure_05 jerasure)
target_link_libraries (jerasure_06 jerasure)
target_link_libraries (jerasure_07 jerasure)
target_link_libraries (jerasure_08 jerasure)
target_link_libraries (reed_sol_01 jerasure)
target_link_libraries (reed_sol_02 jerasure)
target_link_libraries (reed_sol_03 jerasure)
target_link_libraries (reed_sol_04 jerasure)
target_link_libraries (cauchy_01 jerasure)
target_link_libraries (cauchy_02 jerasure)
target_link_libraries (cauchy_03 jerasure)
target_link_libraries (cauchy_04 jerasure)
target_link_libraries (encoder jerasure)
target_link_libraries (decoder jerasure)
target_link_libraries (liberation_01 jerasure)
target_link_libraries (test1 jerasure)
